syntax = "proto3";

package api.v1.storage;

message CreateUploadUrlRequest {
  int32 length = 1;
}

message CreateUploadUrlResponse {
  string path = 1;
  string url = 2;
}

service Service {
  rpc CreateUploadUrl(CreateUploadUrlRequest) returns (CreateUploadUrlResponse) {}
}
